# name: test_doc_needs_builder[test_app0]
  dict({
    'current_version': '1.0',
    'project': 'Python',
    'versions': dict({
      '1.0': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'TC_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'TC_001',
            'content_offset': 11,
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Test example',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_001',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'target_id': 'TC_001',
            'template': None,
            'title': 'Test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'TC_NEG_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'TC_NEG_001',
            'content_offset': 15,
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Negative test example',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_NEG_001',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'closed',
            'style': None,
            'tags': list([
            ]),
            'target_id': 'TC_NEG_001',
            'template': None,
            'title': 'Negative test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'US_63252': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'US_63252',
            'content_offset': 7,
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'A story',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'US_63252',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'in progress',
            'style': None,
            'tags': list([
              '1',
            ]),
            'target_id': 'US_63252',
            'template': None,
            'title': 'A story',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 3,
      }),
      '2.0': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'TEST_01': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_01',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_01',
            'full_title': 'TEST_01 DESCRIPTION',
            'id': 'TEST_01',
            'id_complete': 'TEST_01',
            'id_parent': 'TEST_01',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'SPEC_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'TEST_01 DESCRIPTION',
            'type': 'impl',
            'type_name': 'Implementation',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_02': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_02',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_02',
            'full_title': 'TEST_02 DESCRIPTION',
            'id': 'TEST_02',
            'id_complete': 'TEST_02',
            'id_parent': 'TEST_02',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'TEST_01',
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
              'test_02',
              'test',
            ]),
            'template': None,
            'title': 'TEST_02 DESCRIPTION',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_03': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'AAA',
            'docname': 'subpage_a/subpage_b/subpage',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_03',
            'full_title': 'AAA',
            'id': 'TEST_03',
            'id_complete': 'TEST_03',
            'id_parent': 'TEST_03',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'AAA',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
        }),
        'needs_amount': 6,
      }),
    }),
  })
# ---
# name: test_doc_needs_builder_reproducible[test_app0]
  dict({
    'current_version': '1.0',
    'project': 'Python',
    'versions': dict({
      '1.0': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'TC_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'TC_001',
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Test example',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_001',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'target_id': 'TC_001',
            'template': None,
            'title': 'Test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'TC_NEG_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'TC_NEG_001',
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Negative test example',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_NEG_001',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'closed',
            'style': None,
            'tags': list([
            ]),
            'target_id': 'TC_NEG_001',
            'template': None,
            'title': 'Negative test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'US_63252': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'US_63252',
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'A story',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'US_63252',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'in progress',
            'style': None,
            'tags': list([
              '1',
            ]),
            'target_id': 'US_63252',
            'template': None,
            'title': 'A story',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 3,
      }),
      '2.0': dict({
        'created': '2021-05-11T13:54:22.331724',
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'TEST_01': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_01',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_01',
            'full_title': 'TEST_01 DESCRIPTION',
            'id': 'TEST_01',
            'id_complete': 'TEST_01',
            'id_parent': 'TEST_01',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'SPEC_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'TEST_01 DESCRIPTION',
            'type': 'impl',
            'type_name': 'Implementation',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_02': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_02',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_02',
            'full_title': 'TEST_02 DESCRIPTION',
            'id': 'TEST_02',
            'id_complete': 'TEST_02',
            'id_parent': 'TEST_02',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'TEST_01',
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
              'test_02',
              'test',
            ]),
            'template': None,
            'title': 'TEST_02 DESCRIPTION',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_03': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'AAA',
            'docname': 'subpage_a/subpage_b/subpage',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_03',
            'full_title': 'AAA',
            'id': 'TEST_03',
            'id_complete': 'TEST_03',
            'id_parent': 'TEST_03',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'AAA',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
        }),
        'needs_amount': 6,
      }),
    }),
  })
# ---
